--- a/src/main/resources/templates/sys/user/list.html
+++ b/src/main/resources/templates/sys/user/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head th:include="_include :: head"></head>
+<head th:replace="/_include :: head"></head>
 
 <body class="hold-transition skin-blue sidebar-mini fixed">
 
@@ -28,6 +28,6 @@
 </div>
 <!-- ./wrapper -->
 
-<div th:include="_include :: foot"></div>
+<div th:replace="/_include :: foot"></div>
 </body>
 </html>
