--- a/src/main/resources/templates/_include.html
+++ b/src/main/resources/templates/_include.html
@@ -7,23 +7,23 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.7 -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"
-    th:href="@{'bower_components/bootstrap/dist/css/bootstrap.min.css'}">
+    th:href="@{'/bower_components/bootstrap/dist/css/bootstrap.min.css'}">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"
-    th:href="@{'bower_components/font-awesome/css/font-awesome.min.css'}">
+    th:href="@{'/bower_components/font-awesome/css/font-awesome.min.css'}">
     <!-- Ionicons -->
     <link rel="stylesheet" href="bower_components/Ionicons/css/ionicons.min.css"
-    th:href="@{'bower_components/Ionicons/css/ionicons.min.css'}">
+    th:href="@{'/bower_components/Ionicons/css/ionicons.min.css'}">
     <!-- jvectormap -->
     <link rel="stylesheet" href="bower_components/jvectormap/jquery-jvectormap.css"
-    th:href="@{'bower_components/jvectormap/jquery-jvectormap.css'}">
+    th:href="@{'/bower_components/jvectormap/jquery-jvectormap.css'}">
     <!-- Theme style -->
     <link rel="stylesheet" href="dist/css/AdminLTE.min.css"
-    th:href="@{'dist/css/AdminLTE.min.css'}">
+    th:href="@{'/dist/css/AdminLTE.min.css'}">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css"
-    th:href="@{'dist/css/skins/_all-skins.min.css'}">
+    th:href="@{'/dist/css/skins/_all-skins.min.css'}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,24 +43,35 @@
 <!--foot js include-->
 <div th:fragment="foot">
     <!-- jQuery 3 -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"
+            th:src="@{/bower_components/jquery/dist/jquery.min.js}"></script>
     <!-- Bootstrap 3.3.7 -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"
+            th:src="@{/bower_components/bootstrap/dist/js/bootstrap.min.js}"></script>
     <!-- FastClick -->
-    <script src="bower_components/fastclick/lib/fastclick.js"></script>
+    <script src="bower_components/fastclick/lib/fastclick.js"
+            th:src="@{/bower_components/fastclick/lib/fastclick.js}"></script>
     <!-- AdminLTE App -->
-    <script src="dist/js/adminlte.min.js"></script>
+    <script src="dist/js/adminlte.min.js"
+            th:src="@{/dist/js/adminlte.min.js}"></script>
     <!-- Sparkline -->
-    <script src="bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+    <script src="bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"
+            th:src="@{/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js}"></script>
     <!-- jvectormap  -->
-    <script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"
+            th:src="@{/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js}"></script>
+    <script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"
+            th:src="@{/plugins/jvectormap/jquery-jvectormap-world-mill-en.js}"></script>
     <!-- SlimScroll -->
-    <script src="bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="bower_components/jquery-slimscroll/jquery.slimscroll.min.js"
+            th:src="@{/bower_components/jquery-slimscroll/jquery.slimscroll.min.js}"></script>
     <!-- ChartJS -->
-    <script src="bower_components/chart.js/Chart.js"></script>
+    <script src="bower_components/chart.js/Chart.js"
+            th:src="@{/bower_components/chart.js/Chart.js}"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="dist/js/pages/dashboard2.js"></script>
+    <script src="dist/js/pages/dashboard2.js"
+            th:src="@{/dist/js/pages/dashboard2.js}"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="dist/js/demo.js"></script>
+    <script src="dist/js/demo.js"
+            th:src="@{/dist/js/demo.js}"></script>
 </div>
