--- a/src/main/resources/templates/sys/user/test.html
+++ b/src/main/resources/templates/sys/user/test.html
@@ -98,6 +98,8 @@
 <!-- Add the sidebar's background. This div must be placed
      immediately after the control sidebar -->
 
+<script src="/sys/user/"></script>
+
 <div th:include="_include :: foot"></div>
 </body>
 </html>
