--- a/src/main/resources/templates/layout/_include.html
+++ b/src/main/resources/templates/layout/_include.html
@@ -41,8 +41,7 @@
 </head>
 
 <!--foot js include-->
-<div th:fragment="foot">
-    <!-- jQuery 3 -->
+<div th:fragment="foot">    <!-- jQuery 3 -->
     <script src="bower_components/jquery/dist/jquery.min.js"
             th:src="@{/bower_components/jquery/dist/jquery.min.js}"></script>
     <!-- Bootstrap 3.3.7 -->
