--- a/src/main/resources/templates/layout/_content.html
+++ b/src/main/resources/templates/layout/_content.html
@@ -1,8 +1,9 @@
 <div class="content-wrapper" th:fragment="content">
+
     <!-- Content Header (Page header) -->
-    <section th:replace="/layout/_content_header :: _content_header"></section>
+    <section th:replace="layout/_content_header :: _content_header"></section>
 
     <!-- Main content -->
-    <section th:replace="/layout/_content_body :: _content_body"></section>
+    <section th:replace="layout/_content_body :: _content_body"></section>
     <!-- /.content -->
 </div>
