用户界面布局

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,17 +6,16 @@
 
 <body class="hold-transition skin-blue sidebar-mini fixed">
 
-  <div class="content" layout:fragment="content">
-
+  <div class="content-wrapper" layout:fragment="content">
     <!--content header-->
     <section class="content-header">
       <h1>
         Dashboard
       </h1>
-      <ol class="breadcrumb">
+      <!--<ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> home</a></li>
         <li class="active">Dashboard</li>
-      </ol>
+      </ol>-->
     </section>
     <!--./content header-->
 
