--- a/src/main/resources/templates/layout/_include.html
+++ b/src/main/resources/templates/layout/_include.html
@@ -42,8 +42,6 @@
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"
           th:href="@{https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic}">
 
-
-
     <!-- jQuery 3 -->
     <script src="bower_components/jquery/dist/jquery.min.js"
             th:src="@{/bower_components/jquery/dist/jquery.min.js}"></script>
@@ -58,7 +56,7 @@
             th:src="@{/dist/js/adminlte.min.js}"></script>
     <!-- Sparkline -->
     <script src="bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"
-            th:src="@{/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js}"></script>-->
+            th:src="@{/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js}"></script>
     <!-- SlimScroll -->
     <script src="bower_components/jquery-slimscroll/jquery.slimscroll.min.js"
             th:src="@{/bower_components/jquery-slimscroll/jquery.slimscroll.min.js}"></script>
@@ -72,7 +70,7 @@
             th:src="@{/bower_components/datatables.net/js/jquery.dataTables.min.js}"></script>
     <script src="/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"
             th:src="@{/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js}"></script>
-    <
+
 </head>
 
 <!--foot js include-->
