--- a/src/main/resources/templates/sys/user/user_list.html
+++ b/src/main/resources/templates/sys/user/user_list.html
@@ -6,26 +6,32 @@
 
 <body class="hold-transition skin-blue sidebar-mini fixed">
 
-    <div class="content" layout:fragment="content">
+    <div class="content-wrapper" layout:fragment="content">
         <!-- Content Header (Page header) -->
-        <section class="content-header">
-            <h1>
-                Data Tables
-                <small>advanced tables</small>
-            </h1>
+        <!--<section class="content-header">
+            <h4>
+               用户管理
+            </h4>
             <ol class="breadcrumb">
                 <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
                 <li><a href="#">Tables</a></li>
                 <li class="active">Data tables</li>
             </ol>
-        </section>
+        </section>-->
 
         <section class="content">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="box box-success">
+                <div class="col-xs-3">
+                    <div class="box box-solid">
+                        <div class="box box-header with-border">
+                            <h4 class="box-title">公司机构</h4>
+                        </div>
+                        <div class="box-body" style="height: 500px"></div>
+                    </div>
+                </div>
+                <div class="col-xs-9">
+                    <div class="box box-solid">
                         <div class="box-header with-border">
-                            <h6 class="box-title">查询条件</h6>
+                            <h4 class="box-title">用户管理</h4>
                             <div class="box-tools pull-right">
                                 <button type="button" class="btn btn-box-tool" data-widget="collapse">
                                     <i class="fa fa-minus"></i>
@@ -63,7 +69,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
             <div class="row">
                 <div class="col-xs-12">
