--- a/src/main/resources/templates/layout/_sidebar.html
+++ b/src/main/resources/templates/layout/_sidebar.html
@@ -26,7 +26,7 @@
         <!-- /.search form -->
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu" data-widget="tree">
-            <li class="header">主导航栏</li>
+            <!--<li class="header">主导航栏</li>-->
             <!--左侧菜单栏-->
             <li class="treeview" th:each="menu : ${session.menus}">
                 <a href="#" th:href="${menu.attrs.href}">
