--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="includes/csslibs :: common_css(~{:: title}, ~{:: link})">
-
+    <title>GoFL后台管理</title>
+    <link rel="stylesheet"/>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini fixed">
@@ -68,6 +69,5 @@
         <!-- Jquery Sidebar Data -->
         <script th:src="@{/modules/admin/admin.js}"></script>
     </div>
-
 </body>
 </html>
