--- a/src/main/resources/templates/admin/dashboard/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard/dashboard.html
@@ -3,6 +3,7 @@
 
 <!--th:replace="/includes/csslibs :: csslibs"-->
 <head th:replace="includes/csslibs :: common_css(~{::title},~{::link})">
+    <title>GoFl后台管理-仪表盘</title>
     <!-- Pace -->
     <link rel="stylesheet" th:href="@{/common/plugins/pace-master/themes/blue/pace-theme-flash.css}">
     <script type="text/javascript" th:src="@{/common/plugins/pace-master/pace.min.js}"></script>
